--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "^13.5.2",
+    "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lowdb": "^6.0.1",
